--- a/Mapping_GeoJSON_Points/index 13.5.2.html
+++ b/Mapping_GeoJSON_Points/index 13.5.2.html
@@ -23,6 +23,6 @@
     <script type="text/javascript" src="static/js/config.js"></script>
     <!-- Our JavaScript -->
     <script type="text/javascript" src="static/js/cities.js"></script>
-    <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="static/js/logic13_5_2.js"></script>    
 </body>
 </html>
